@@ -7,33 +7,33 @@ import (
 	"godemon/godemonInfo"
 )
 
-func LoadCMD(filepath string, modOrFile string, version string) (string, string, string, string, *bool, bool, string, string, string, string, bool, bool, bool, string, string, bool, bool, bool) {
+func LoadCMD(filepath string, modOrFile string) (string, string, string, string, *bool, bool, string, string, string, string, bool, bool, bool, string, string, bool, bool, bool) {
 	var filepathP *string
-	cmd := flag.Bool("cmd", false, "a bool")
-	cnfM := flag.Bool("cnf", false, "a bool")
-	deploy := flag.Bool("deploy", false, "a bool")
-	filepathP = flag.String("path", "", "a string")
-	commandP := flag.String("command", "", "a string")
-	helpP := flag.Bool("help", false, "a bool")
-	initP := flag.Bool("init", false, "a bool")
-	nameP := flag.String("name", "", "a string")
-	osP := flag.String("os", "", "a string")
-	archP := flag.String("arch", "", "a string")
-	mod := flag.Bool("mod", false, "a bool")
-	file := flag.Bool("file", false, "a bool")
-	addFileM := flag.Bool("addFile", false, "a bool")
-	addCommandM := flag.Bool("addCommand", false, "a bool")
-	addVariable := flag.Bool("addVariable", false, "a bool")
-	value := flag.String("value", "", "a string")
-	key := flag.String("key", "", "a string")
-	updateName := flag.Bool("updateName", false, "a bool")
-	updateArch := flag.Bool("updateArch", false, "a bool")
-	updateOS := flag.Bool("updateOS", false, "a bool")
-	versionF := flag.Bool("version", false, "a bool")
-	changes := flag.Bool("logChanges", false, "a bool")
+	cmd := flag.Bool("cmd", false, "CMD mode")
+	cnfM := flag.Bool("cnf", false, "project.json mode")
+	deploy := flag.Bool("deploy", false, "building project using info from project.json")
+	filepathP = flag.String("path", "", "path to file or dir")
+	commandP := flag.String("command", "", "command name")
+	helpP := flag.Bool("help", false, "help section")
+	initP := flag.Bool("init", false, "initialize project")
+	nameP := flag.String("name", "", "name of project/file/command")
+	osP := flag.String("os", "", "os variable")
+	archP := flag.String("arch", "", "architecture variable")
+	mod := flag.Bool("mod", false, "module option")
+	file := flag.Bool("file", false, "file option")
+	addFileM := flag.Bool("addFile", false, "add file to watching list in project.json")
+	addCommandM := flag.Bool("addCommand", false, "add command to commands list in project.json")
+	addVariable := flag.Bool("addVariable", false, "add tmp variable to project.json")
+	value := flag.String("value", "", "value of ...")
+	key := flag.String("key", "", "key of ...")
+	updateName := flag.Bool("updateName", false, "update name of project")
+	updateArch := flag.Bool("updateArch", false, "update arch of project")
+	updateOS := flag.Bool("updateOS", false, "update os of project")
+	versionF := flag.Bool("version", false, "print version of godemon")
+	changes := flag.Bool("logChanges", false, "print changes")
 	flag.Parse()
 	if *versionF == true {
-		godemonInfo.LogVersion(version)
+		godemonInfo.LogVersion()
 	}
 	if *changes == true {
 		godemonInfo.LogChanges()
