@@ -33,3 +33,7 @@ CHANGES: 21-06-19-03-2021
 CHANGES: 21-06-23-03-2021
 - Added -version flag
 - Code cleaned up
+
+CHANGES: 21-06-24-03-2021
+- Added version.txt to godemon path
+- code cleaned up
